tests/golden/type_errors/index_compound_non_number_index.cd
let xs = [1];
xs["bad"] += 1;
